--- a/proj1/department/templates/department/registration2.html
+++ b/proj1/department/templates/department/registration2.html
@@ -10,6 +10,7 @@
     <p>Пароль: {{ form.pasword }}</p>
     <p>Подтверждение пароля: {{ form.pasword_confirm }}</p>
     <p>Введите OTP: {{ form.otp }}</p>
+    <p>{{ form.number.as_hidden }}</p>
     <button type="submit" class="btn btn-secondary">Далее...</button>
 </form>
 {% endblock %}
