--- a/proj1/department/templates/department/registration3.html
+++ b/proj1/department/templates/department/registration3.html
@@ -8,6 +8,7 @@
     {% csrf_token %}
     <p>Пароль: {{ form.pasword }}</p>
     <p>Введите OTP: {{ form.otp }}</p>
+    <p>{{ form.number.as_hidden }}</p>
     <button type="submit" class="btn btn-secondary">Далее...</button>
 </form>
 {% endblock %}
