есть два события

--- a/proj1/department/templates/department/registration3.html
+++ b/proj1/department/templates/department/registration3.html
@@ -9,6 +9,7 @@
     <p>Пароль: {{ form.pasword }}</p>
     <p>Введите OTP: {{ form.otp }}</p>
     <p>{{ form.number.as_hidden }}</p>
+    <p>Ваш otp-пароль: {{ otp }}</p>
     <button type="submit" class="btn btn-secondary">Далее...</button>
 </form>
 {% endblock %}
