--- a/proj1/department/templates/department/registration.html
+++ b/proj1/department/templates/department/registration.html
@@ -9,7 +9,7 @@
     <p>Имя и фамилия пользователя: {{ form.user_name }}</p>
     <p>Введите OTP: {{ form.otp }}</p>
     <p>{{ form.number.as_hidden }}</p>
-    <p>{{ otp }}</p>
+    <p>Ваш otp-пароль: {{ otp }}</p>
     <button type="submit" class="btn btn-secondary">Далее...</button>
 </form>
 {% endblock %}
